# padel

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml  gen.py
.github/workflows/: docker.yml
src/: angebotsdaten.rs  gender.rs  main.rs  participant.rs  signup.rs  status.rs  utils.rs
