[package]
name = "padel"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features=["serde"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
encoding = "0.2.33"
form_urlencoded = "1.2.1"
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["gzip"] }
scraper = "0.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.122"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
